[gd_scene load_steps=29 format=3 uid="uid://sbes3fxx23wc"]

[ext_resource type="Script" path="res://player1.gd" id="1_3bkxr"]
[ext_resource type="Texture2D" uid="uid://cqwqegiw4ewyw" path="res://Textures/Player/Clothed Sprite Sheet 1.png" id="2_y3nx8"]
[ext_resource type="Theme" uid="uid://dmm7qxbft8xa2" path="res://gameTheme.tres" id="3_8n8ou"]
[ext_resource type="Texture2D" uid="uid://djciurfv0laxq" path="res://icon.svg" id="3_b118l"]
[ext_resource type="Texture2D" uid="uid://xtf6xxyunrhp" path="res://Textures/Player/Character Glow Sprite Sheet.png" id="4_pngsp"]
[ext_resource type="Texture2D" uid="uid://c78dgm0pmb0s0" path="res://Textures/Player/bubble.png" id="6_y356f"]
[ext_resource type="Texture2D" uid="uid://dvbi1mfcaw0em" path="res://Textures/Player/barbehind.png" id="7_arhw0"]
[ext_resource type="Texture2D" uid="uid://ddlgrbere280h" path="res://Textures/Player/bar.png" id="8_iwlat"]
[ext_resource type="Texture2D" uid="uid://cht42a28lqpy6" path="res://Textures/Particles/fire.png" id="9_c3jh8"]
[ext_resource type="Script" path="res://Objects/lineAssist.gd" id="10_2o7a1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rtb3"]
size = Vector2(14, 13)

[sub_resource type="Animation" id="Animation_rj0vy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_vgth5"]
resource_name = "useBucket"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [13, 12, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slot:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.307786, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(10, -1), Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_pgfhr"]
resource_name = "useBucketFlip"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [13, 12, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slot:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.307786, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(-10, -1), Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_h104o"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4icj6"]
_data = {
"RESET": SubResource("Animation_rj0vy"),
"useBucket": SubResource("Animation_vgth5"),
"useBucketFlip": SubResource("Animation_pgfhr"),
"walk": SubResource("Animation_h104o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksi2l"]
size = Vector2(20, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_784le"]
size = Vector2(27, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x18x8"]
size = Vector2(36, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohsrs"]
size = Vector2(27, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt5p5"]
size = Vector2(14, 2)

[sub_resource type="Curve" id="Curve_ftjhi"]
_data = [Vector2(0, 0.230189), 0.0, 0.0, 0, 0, Vector2(0.30916, 0.683019), 1.39147, 1.39147, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_eanli"]
resource_name = "RESET"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Breath:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24u21"]
_data = {
"RESET": SubResource("Animation_eanli")
}

[sub_resource type="Curve" id="Curve_fqrry"]
_data = [Vector2(0, 0.486792), 0.0, 0.0, 0, 0, Vector2(0.187023, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.441509), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_6goo2"]
offsets = PackedFloat32Array(0, 0.723214, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.955357, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_lnqd8"]
min_value = -1.0
_data = [Vector2(0, -0.992453), 0.0, 0.0, 0, 0, Vector2(1, -0.328302), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftbcg"]
size = Vector2(56, 57)

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("breathBar")]
z_index = -2
script = ExtResource("1_3bkxr")
mercyJump = 0.15
breath = 15.0
breathBar = NodePath("Breath")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_1rtb3")
debug_color = Color(0.813539, 0.00203189, 0.979641, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("2_y3nx8")
hframes = 28

[node name="Label" type="Label" parent="Sprite2D"]
visible = false
anchors_preset = -1
anchor_top = 0.516
anchor_right = 1.0
anchor_bottom = 1.109
offset_left = -16.0
offset_top = -13.512
offset_right = -16.0
offset_bottom = -18.488
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8n8ou")
text = "W"
metadata/_edit_use_anchors_ = true

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -15)
texture = ExtResource("4_pngsp")
hframes = 28

[node name="Label" type="Label" parent="Highlight"]
visible = false
anchors_preset = -1
anchor_top = 0.516
anchor_right = 1.0
anchor_bottom = 1.109
offset_left = -16.0
offset_top = -13.512
offset_right = -16.0
offset_bottom = -18.488
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8n8ou")
text = "W"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4icj6")
}

[node name="PickUp" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 1028

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUp"]
position = Vector2(17, 0.5)
shape = SubResource("RectangleShape2D_ksi2l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PickUp"]
position = Vector2(13.5, -14.5)
shape = SubResource("RectangleShape2D_784le")

[node name="Build" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Build"]
position = Vector2(9, -2)
shape = SubResource("RectangleShape2D_x18x8")

[node name="Sprite2D" type="Sprite2D" parent="Build/CollisionShape2D"]
visible = false
scale = Vector2(0.146484, 0.0898438)
texture = ExtResource("3_b118l")

[node name="Interact" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2(19.5, 0.5)
shape = SubResource("RectangleShape2D_ohsrs")

[node name="Air" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_jt5p5")

[node name="Feet" type="Area2D" parent="."]
position = Vector2(0, 6)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Feet"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_jt5p5")

[node name="Slot" type="Node2D" parent="."]
position = Vector2(0, -14)

[node name="Drop" type="Node2D" parent="."]
position = Vector2(18, -14)

[node name="AimAssist" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 0)
z_index = 10
position = Vector2(0, -18)
scale = Vector2(0.0390625, 0.0390625)
texture = ExtResource("3_b118l")
offset = Vector2(512, 0)

[node name="LineAssist" type="Node2D" parent="AimAssist"]
z_index = -90
scale = Vector2(25.6, 25.6)
script = ExtResource("10_2o7a1")
length = 40
baseSize = 0.75
step = 0.02
decayTime = 0.0
decayPercentage = 0.2

[node name="Bubbles" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.780392)
position = Vector2(0, -7)
emitting = false
amount = 1
lifetime = 0.5
texture = ExtResource("6_y356f")
emission_shape = 4
emission_points = PackedVector2Array(6, 0)
emission_colors = PackedColorArray()
spread = 0.0
gravity = Vector2(0, -200)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 200.0
damping_max = 200.0
scale_amount_curve = SubResource("Curve_ftjhi")

[node name="Breath" type="Sprite2D" parent="."]
visible = false
z_index = 15
position = Vector2(0, -21)
texture = ExtResource("7_arhw0")

[node name="Bar" type="Sprite2D" parent="Breath"]
position = Vector2(-8, 0)
texture = ExtResource("8_iwlat")
offset = Vector2(8, 0)

[node name="BarAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_24u21")
}

[node name="Splash" type="CPUParticles2D" parent="."]
position = Vector2(0, 3)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("9_c3jh8")
emission_shape = 3
emission_rect_extents = Vector2(16, 1)
direction = Vector2(0, -1)
spread = 53.51
initial_velocity_min = 85.55
initial_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_curve = SubResource("Curve_fqrry")
color = Color(0, 0.164706, 1, 1)
color_ramp = SubResource("Gradient_6goo2")
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_lnqd8")

[node name="TorchCatcher" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3072

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchCatcher"]
position = Vector2(20, -15.5)
shape = SubResource("RectangleShape2D_ftbcg")

[connection signal="body_entered" from="PickUp" to="." method="onPickUpEntered"]
[connection signal="body_exited" from="PickUp" to="." method="onPickUpExited"]
[connection signal="area_entered" from="Build" to="." method="onBuildEntered"]
[connection signal="area_exited" from="Build" to="." method="onBuildExited"]
[connection signal="area_entered" from="Interact" to="." method="onInteractEntered"]
[connection signal="area_exited" from="Interact" to="." method="onInteractExited"]
[connection signal="body_entered" from="TorchCatcher" to="." method="torchEntered"]
